colorpicker v0 (radio nutton simple)

--- a/index.html
+++ b/index.html
@@ -73,13 +73,30 @@
         <option value="48">deux jours</option>
         <option value="168">une semaine</option>
       </select>
-
+       <!-- <input type="date" class="datepicker"> -->
     </div>
     depuis
     <div class="input-field">
       <input id="addtext" type="text" class="validate">
       <label for="addtext">quoi ?</label>
     </div>
+
+    <!-- colors -->
+    <form action="#" id='colorpicker'>
+
+        <input name="colorpicker1" type="radio" id="red" value='red'  />
+        <label for="red" >Red</label>
+
+        <input name="colorpicker1" type="radio" id="blue" value='blue' />
+        <label for="blue">Blue</label>
+
+        <input name="colorpicker1" type="radio" id="green" value='green' />
+        <label for="green">Green</label>
+
+        <input name="colorpicker1" type="radio" id="amber" value='amber'/>
+        <label for="amber">Amber</label>
+
+    </form>
 
   </div>
   <div class="modal-footer">
