clean code & bug

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 <div class="row masonry-wall">
   <!-- Logo -->
-  <div class="col s12 m4">
+  <div class="col s12 m6 l4 ">
     <div class="card-panel blue">
       <h2 class="white-text logo">DÉJÀ</h2>
     </div>
   </div>
   <!-- info -->
-  <div class="col s12 m4 ">
+  <div class="col s12 m6 l4 ">
     <div class="card-panel red">
       <span class="white-text">Depuis déjà combien de temps ?</span>
     </div>
@@ -84,7 +84,7 @@
     <!-- colors -->
     <form action="#" id='colorpicker'>
 
-        <input name="colorpicker1" type="radio" id="red" value='red'  />
+        <input name="colorpicker1" type="radio" id="red" value='red' checked="checked"  />
         <label for="red" >Red</label>
 
         <input name="colorpicker1" type="radio" id="blue" value='blue' />
