fix css font ggle

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>déjà</title>
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chango|Exo+2:500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:500,600" rel="stylesheet">
 
   <!-- Styles -->
   <link rel="stylesheet"
