--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 
-  <link href="./js/jquery-ui.css" rel="stylesheet">
   <link rel="stylesheet" href="deja_style.css">
 
   <!-- Libs -->
   <script src="./js/jquery-3.2.1.min.js"></script>
-  <script src="./js/jquery-ui.min.js"></script>
   <script src="./js/moment-with-locales.min.js"></script>
   <script src="./js/mustache.min.js"></script>
   <script src="./js/js.cookie.js"></script>
@@ -72,7 +70,7 @@
         <option value="48">deux jours</option>
         <option value="168">une semaine</option>
       </select>
-       <!-- <input type="date" class="datepicker"> -->
+      <input type="date" class="datepicker">
     </div>
     depuis
     <div class="input-field">
