--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="./js/masonry.pkgd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
-  <script src="./js/cookieslist.js"></script>
+  <script src="./js/deja.js"></script>
 </head>
 
 <body>
