datepicker icon only

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <option value="168">une semaine</option>
       </select>
       <input type="date" class="datepicker">
+
     </div>
+    <a class='action-calendar black-text waves-effect btn-floating btn-flat'> <i class='material-icons black-text'>event</i></a>
     depuis
     <div class="input-field">
       <input id="addtext" type="text" class="validate">
